removed some mystery duplicate code chunk labels

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -56,7 +56,7 @@ Suppose our computer's filesystem looks like the picture below, and we are worki
 read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. 
 We show both choices below.
 
-```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
+```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
 knitr::include_graphics("img/file-system-for-export-to-intro-datascience.svg")
 ```
 
