--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -136,7 +136,7 @@ total set of variables per image in this data set are:
 11. Symmetry 
 12. Fractal Dimension 
 
-```{r 11-population-vs-sample, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A malignant breast fine needle aspiration image. [Source](https://pubsonline.informs.org/doi/abs/10.1287/opre.43.4.570)", fig.retina = 2, out.width="400"}
+```{r 05-bc-cells, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A malignant breast fine needle aspiration image. [Source](https://pubsonline.informs.org/doi/abs/10.1287/opre.43.4.570)", fig.retina = 2, out.width="400"}
 knitr::include_graphics("img/malignant_cancer.png")
 ```
 
