--- a/11-moving-to-your-own-machine.Rmd
+++ b/11-moving-to-your-own-machine.Rmd
@@ -2,241 +2,92 @@
 
 ## Overview
 
-In this chapter, you'll gain the necessary expertise to be able to move from
-working on web-based platform (e.g., JupyterHub) for performing your data 
-analysis, to installing and running the software needed for you to do this on 
-your own computer.
+Throughout this book, we have assumed that you are working on a web-based platform
+(e.g., JupyterHub) that already has Jupyter, R, a number of R packages, and Git set up and ready to use. 
+In this chapter, you'll learn how to install all of that software on your own computer in case
+you don't have a preconfigured JupyterHub available to you.
 
 ## Chapter learning objectives
 
 By the end of the chapter, students will be able to:
 
-- install and launch a local instance of Jupyter lab that runs R
-- download files from the course web-based platform (e.g., JupyterHub) for later
-use
+- install Git and the miniconda Python distribution
+- install and launch a local instance of JupyterLab with the R kernel
+- download files from a JupyterHub for later local use
 
 ## Installing software on your own computer
 
-In this section we will provide instructions for installing the software to do
-the types of data analysis you learned about in this book on our own computer. 
+In this section we will provide instructions for installing the software 
+required by this book on our own computer. 
 Given that installation instructions can vary widely based on the computer setup
-we have created instructions for recent versions of three popular operating 
-systems.
+we have created instructions for multiple operating systems.
+In particular, the installation instructions below have been verified to work
+on a computer that:
 
-The installation instructions below have been test on computers with the 
-following specifications:
-
-- runs one of the following operating systems: macOS 10.15.X (Catalina), Ubuntu 20.04, Windows 10; version 2004.
+- runs one of the following operating systems: MacOS 10.15.X (Catalina); Ubuntu 20.04; Windows 10, version 2004.
 - can connect to networks via a wireless connection
 - uses a 64-bit CPU
 - uses English as the default language
 
-### Windows
-
-#### Git
-
-As shown in the version control chapter, Git is a very useful tool for version
-controlling your projects, as well as sharing your work with others. To install
-Git on Windows go to <https://git-scm.com/download/win> and download the windows 
-version of git. After the download has finished, run the installer and accept 
-the default configuration for all pages.
-
-#### JupyterLab
-
-To run Jupyter notebooks on our computers we will need to install a program 
-similar to the one we used as our web-based platform. One such program is 
-Jupyter lab. Jupyter lab relies on Python, and the two can be easily installed
-together using the miniconda Python package distribution.
-
-To install the miniconda Python package distribution we first download it 
-the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). 
-After the download has finished, run the installer and accept the default 
-configuration for all pages.
-
-After installation, open the Start Menu and search for the program called 
-"Anaconda Prompt (miniconda3)". When this opens you will see a prompt similar to 
-`(base) C:\Users\your_name`. To install Jupyter lab and the Jupyter Git 
-extension, type the following into the Anaconda Prompt and press enter:
-
-```
-conda install -c conda-forge -y jupyterlab
-conda install -y nodejs=10.*
-pip install --upgrade jupyterlab-git
-jupyter lab build
-```
-
-To test that your Jupyter lab installation is functional, you can type 
-`jupyter lab` into the Anaconda Prompt and press enter. This should open a new 
-tab in your default browser with the Jupyter lab interface. To exit out of 
-Jupyter lab you can click `File -> Shutdown`, or go to the terminal from which 
-you launched JupyterLab and hold `Ctrl` while pressing `c` twice.
-
-#### R and the IRkernel
-
-To have R available to you in Jupyter lab, you will need to install the R
-programming language and the IRkernel. To install both type the following into 
-the Anaconda Prompt:
-
-```
-conda install -c conda-forge r-base
-conda install -c conda-forge r-irkernel
-```
-
-To improve the experience of using R in Jupyter lab, we will add an extension 
-that allows us to setup keyboard shortcuts for inserting text.
-By default, it creates shortcuts for inserting two of the most common R 
-operators: `<-` and `%>%`. Type the following in the Anaconda Prompt and press 
-enter:
-
-```
-jupyter labextension install @techrah/text-shortcuts
-jupyter lab build
-```
-
-#### R packages
-
-To install the packages used in this book, type the following in the Anaconda 
-Prompt and press enter:
-
-```
-conda install -c conda-forge -y
-  r-cowplot \
-  r-ggally \
-  r-gridextra \
-  r-infer \
-  r-kknn \
-  r-rodbc \
-  r-rpostgres \
-  r-rsqlite \
-  r-testthat \
-  r-tidymodels \
-  r-tinytex \
-  unixodbc
-```
-
-### Mac OS
-
-#### Bash
-
-Apple recently changed the Mac default shell in the Terminal to Zsh, however, 
-programs we need work better with the Bash shell. Thus, we recomend you change 
-the default shell in your Terminal app to Bash by opening the Terminal app 
+**For macOS users only:** Apple recently changed the default shell in the terminal to Zsh.
+However, the programs we need work better with the Bash shell. Thus, we recomend you change 
+the default shell to Bash by opening the terminal 
 ([how to video](https://youtu.be/5AJbWEWwnbY)) and typing:
 
 ```
 chsh -s /bin/bash
 ```
 
-You will have to quit all instances of open Terminals and then restart the 
-Terminal for this to take effect.
+You will have to quit all instances of open terminals and then restart the 
+terminal for this to take effect.
 
-#### Git
+### Git
+
 As shown in the version control chapter, Git is a very useful tool for version
-controlling your projects, as well as sharing your work with others. To install
-Git on Mac OS open the Terminal app ([how to video](https://youtu.be/5AJbWEWwnbY)) 
-and type the following command:
+controlling your projects, as well as sharing your work with others.
+
+**Windows:** To install
+Git on Windows go to <https://git-scm.com/download/win> and download the windows 
+version of git. Once the download has finished, run the installer and accept 
+the default configuration for all pages.
+
+**MacOS:** To install Git on Mac OS open the terminal and type the following command:
 
 ```
 xcode-select --install
 ```
 
-#### JupyterLab
-
-To run Jupyter notebooks on our computers we will need to install a program 
-similar to the one we used as our web-based platform. One such program is 
-Jupyter lab. Jupyter lab relies on Python, and the two can be easily installed
-together using the miniconda Python package distribution.
-
-To install the miniconda Python package distribution we first download it 
-the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.pkg). 
-After the download has finished, run the installer and accept the default 
-configuration for all pages.
-
-After installation of the miniconda Python package distribution, open the 
-terminal app to install Jupyter lab and the Jupyter Git extension by typing the 
-following and pressing enter:
-
-```
-conda install -c conda-forge -y jupyterlab
-conda install -y nodejs=10.*
-pip install --upgrade jupyterlab-git
-jupyter lab build
-```
-
-To test that your Jupyter lab installation is functional, you can type 
-`jupyter lab` into the terminal and press enter. This should open a new 
-tab in your default browser with the Jupyter lab interface. To exit out of 
-Jupyter lab you can click `File -> Shutdown`, go to the terminal from which you 
-launched JupyterLab and hold `Ctrl` while pressing `c` twice.
-
-
-#### R and the IRkernel
-
-To have R available to you in Jupyter lab, you will need to install the R
-programming language and the IRkernel. To install both type the following into 
-the Terminal:
-
-```
-conda install -c conda-forge r-base
-conda install -c conda-forge r-irkernel
-```
-
-To improve the experience of using R in Jupyter lab, we will add an extension 
-that allows us to setup keyboard shortcuts for inserting text.
-By default, it creates shortcuts for inserting two of the most common R 
-operators: `<-` and `%>%`. Type the following in the Terminal and press 
-enter:
-
-```
-jupyter labextension install @techrah/text-shortcuts
-jupyter lab build
-```
-
-#### R packages
-
-To install the packages used in this book, type the following in the Terminal 
-and press enter:
-
-```
-conda install -c conda-forge -y
-  r-cowplot \
-  r-ggally \
-  r-gridextra \
-  r-infer \
-  r-kknn \
-  r-rodbc \
-  r-rpostgres \
-  r-rsqlite \
-  r-testthat \
-  r-tidymodels \
-  r-tinytex \
-  unixodbc
-```
-
-
-### Ubuntu
-
-#### Git
-As shown in the version control chapter, Git is a very useful tool for version
-controlling your projects, as well as sharing your work with others. To install
-Git on Mac OS open the Terminal app and type the following commands:
+**Ubuntu:** To install Git on Ubuntu open the terminal and type the following commands:
 
 ```
 sudo apt update
 sudo apt install git
 ```
 
-#### JupyterLab
+
+### Miniconda
 
 To run Jupyter notebooks on our computers we will need to install a program 
 similar to the one we used as our web-based platform. One such program is 
-Jupyter lab. Jupyter lab relies on Python, and the two can be easily installed
-together using the miniconda Python package distribution.
+JupyterLab. But JupyterLab relies on Python; we can install this via
+the [miniconda Python package distribution](https://docs.conda.io/en/latest/miniconda.html).
 
-To install the miniconda Python package distribution we first download it 
+**Windows:** To install miniconda on Windows, download 
+the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). 
+Once the download has finished, run the installer and accept the default 
+configuration for all pages. After installation, you can open the Anaconda Prompt
+by opening the Start Menu and searching for the program called 
+"Anaconda Prompt (miniconda3)". When this opens you will see a prompt similar to 
+`(base) C:\Users\your_name`. 
+
+**MacOS:** To install miniconda on MacOS, download 
+the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.pkg). 
+After the download has finished, run the installer and accept the default 
+configuration for all pages.
+
+**Ubuntu:** To install miniconda on Ubuntu, we first download
 the [Python 3.8 64-bit version from here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh). 
-
-After the download has finished, open the Terminal and execute the following 
+After the download has finished, open the terminal and execute the following 
 commands:
 
 ```
@@ -257,9 +108,11 @@ The instructions for the installation will then appear:
 (4) Press enter to accept the default installation location.
 (5) Type `yes` and press enter to instruct the installer to run `conda init`, which makes `conda` available from the terminal/shell.
 
-After installation of the miniconda Python package distribution, open the 
-terminal app to install Jupyter lab and the Jupyter Git extension by typing the 
-following and pressing enter:
+
+### JupyterLab
+
+With miniconda set up, we can now install JupyterLab and the Jupyter Git  extension. 
+Type the following into the Anaconda Prompt (Windows) or the terminal (MacOS and Ubuntu) and press enter:
 
 ```
 conda install -c conda-forge -y jupyterlab
@@ -268,39 +121,37 @@ pip install --upgrade jupyterlab-git
 jupyter lab build
 ```
 
-To test that your Jupyter lab installation is functional, you can type 
-`jupyter lab` into the terminal and press enter. This should open a new 
-tab in your default browser with the Jupyter lab interface. To exit out of 
-Jupyter lab you can click `File -> Shutdown`, go to the terminal from which you 
-launched JupyterLab and hold `Ctrl` while pressing `c` twice.
+To test that your JupyterLab installation is functional, you can type 
+`jupyter lab` into the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press enter. This should open a new 
+tab in your default browser with the JupyterLab interface. To exit out of 
+JupyterLab you can click `File -> Shutdown`, or go to the terminal from which 
+you launched JupyterLab, hold `Ctrl`, and press `c` twice.
 
+### R and the IRkernel
 
-#### R and the IRkernel
-
-To have R available to you in Jupyter lab, you will need to install the R
-programming language and the IRkernel. To install both type the following into 
-the Terminal:
+To have R available to you in JupyterLab, you will need to install the R programming language and the IRkernel. 
+To install these, type the following into 
+the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu):
 
 ```
 conda install -c conda-forge r-base
 conda install -c conda-forge r-irkernel
 ```
 
-To improve the experience of using R in Jupyter lab, we will add an extension 
+To improve the experience of using R in JupyterLab, we will add an extension 
 that allows us to setup keyboard shortcuts for inserting text.
-By default, it creates shortcuts for inserting two of the most common R 
-operators: `<-` and `%>%`. Type the following in the Terminal and press 
-enter:
+By default, this extension creates shortcuts for inserting two of the most common R 
+operators: `<-` and `%>%`. Type the following in the Anaconda Prompt (Windows)
+or terminal (MacOS and Ubuntu) and press  enter:
 
 ```
 jupyter labextension install @techrah/text-shortcuts
 jupyter lab build
 ```
 
-#### R packages
+### R packages
 
-To install the packages used in this book, type the following in the Terminal 
-and press enter:
+To install the packages used in this book, type the following in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press enter:
 
 ```
 conda install -c conda-forge -y
@@ -318,20 +169,21 @@ conda install -c conda-forge -y
   unixodbc
 ```
 
-## Moving your files from a web-based platform to your local computer
+## Moving files to your computer
 
 In the course that uses this textbook, students work on a web-based platform 
-(e.g., a JupyterHub) to do their course work. This section is to help students
+(a JupyterHub) to do their course work. This section is to help students
 save their work from this platform at the end of the course. 
 
-First in JupyterHub, open a terminal by clicking terminal in the Launcher tab
-of the JupyterHub. Next, type the following in the terminal to create a 
-compressed .zip folder for the course work you are interested in downloading:
+First in JupyterHub, open a terminal by clicking "terminal" in the Launcher tab. 
+Next, type the following in the terminal to create a 
+compressed `.zip` archive for the course work you are interested in downloading:
 
 ```
-zip -r course_folder.zip course_folder
+zip -r course_folder.zip your_course_folder
 ```
 
 After the compressing process is complete, right-click on `course_folder.zip`
-and click Download. You should be able to use your computer's software to unzip
+in the JupyterHub file browser
+and click "Download". You should be able to use your computer's software to unzip
 the compressed folder by double-clicking on it. 
