standardized additional resources section naming

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -520,7 +520,7 @@ map_df(mtcars, max, na.rm  = TRUE)
 The `map_*` functions are generally quite useful for solving problems involving iteration/repetition. Additionally, their use is not limited to columns 
 of a data frame; `map_*` functions can be used to apply functions to elements of a vector or list, and even to lists of data frames, or nested data frames.
 
-## Additional readings/resources
+## Additional resources
 Grolemund & Wickham's [R for Data Science](https://r4ds.had.co.nz/) has a number of useful sections that provide additional information:
 
 - [Data transformation](https://r4ds.had.co.nz/transform.html)
