--- a/04-version_control.Rmd
+++ b/04-version_control.Rmd
@@ -588,7 +588,7 @@ image_read("img/version_control/issue_06.png") %>%
   image_crop("3584x1900")
 ```
 
-## Additional readings/resources
+## Additional resources
 
 Now that you've picked up the basics of version control with Git and GitHub, you can expand your knowledge using 
 one of the many tutorials available online:
