--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -475,7 +475,7 @@ quantifying how big each of these effects are, and assessing how accurately we
 can estimate each of these effects. This side of regression is the topic of
 many follow-on statistics courses and beyond the scope of this course.
 
-## Additional readings/resources
+## Additional resources
 - Pages 59-71 of [Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) with Applications in R by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
 - Pages 104 - 109 of [An Introduction to Statistical Learning with Applications in R](https://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
 - [The `caret` Package](https://topepo.github.io/caret/index.html)
