--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -524,15 +524,7 @@ elbow_plot
 
 
 
-## Additional readings:
-
-<!--Watch the video linked to below for an explanation of the K-means clustering algorithm:
-- https://www.coursera.org/lecture/machine-learning-data-analysis/what-is-a-k-means-cluster-analysis-p94tY
-
-*note - when the advertisement pops up to register for this course, you can
-just click to ignore it (i.e., no need to sign up to watch the entire video)*
-
--->
+## Additional resources
 
 For more about clustering and K-means, refer to pages 385-390 and 404-405 
 of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani, as well
