--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -878,7 +878,7 @@ practice, we would not know whether our interval captured the population paramet
 
 This chapter is only the beginning of the journey into statistical inference. We can extend the concepts learned here to do much more than report point estimates and confidence intervals, such as hypothesis testing for differences between populations, tests for associations between variables, and so much more! We have just scratched the surface of statistical inference; however, the material presented here will serve as the foundation for more advanced statistical techniques you may learn about in the future!
 
-## Additional readings
+## Additional resources
 
 For more about statistical inference and bootstrapping, refer to 
 
