Corrected all refs

--- a/index.Rmd
+++ b/index.Rmd
@@ -51,7 +51,7 @@ The book is structured so that learners spend the first four chapters learning h
 3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
 4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iphone)
 
-For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are needed to answer such questions. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
+For each of these problems, we map them to the type of data analysis question being asked and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
 **Types of data analysis questions**
 
