--- a/references.bib
+++ b/references.bib
@@ -14,3 +14,54 @@
   title = {Census of Population. Reproduced and distributed on an "as is" basis with the permission of Statistics Canada},
   year = {2016},
 }
+
+@article{leek2015question,
+  title={What is the question?},
+  author={Leek, Jeffery T and Peng, Roger D},
+  journal={Science},
+  volume={347},
+  number={6228},
+  pages={1314--1315},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{peng2015art,
+  title={The art of data science},
+  author={Peng, Roger D and Matsui, Elizabeth},
+  journal={A Guide for Anyone Who Works with Data. Skybrude Consulting, LLC},
+  year={2015}
+}
+
+@article{matthews2008configuration,
+  title={Configuration management for large-scale scientific computing at the UK Met office},
+  author={Matthews, David and Wilson, Greg and Easterbrook, Steve},
+  journal={Computing in Science \& Engineering},
+  volume={10},
+  number={6},
+  pages={56--64},
+  year={2008},
+  publisher={IEEE Computer Society}
+}
+
+@article{wilson2014best,
+  title={Best practices for scientific computing},
+  author={Wilson, Greg and Aruliah, Dhavide A and Brown, C Titus and Hong, Neil P Chue and Davis, Matt and Guy, Richard T and Haddock, Steven HD and Huff, Kathryn D and Mitchell, Ian M and Plumbley, Mark D and others},
+  journal={PLoS Biol},
+  volume={12},
+  number={1},
+  pages={e1001745},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+@article{wickham2014tidy,
+  title={Tidy data},
+  author={Wickham, Hadley and others},
+  journal={Journal of Statistical Software},
+  volume={59},
+  number={10},
+  pages={1--23},
+  year={2014}
+}
+
