--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -101,13 +101,11 @@ There are many ways a spreadsheet-like data set can be organized. This chapter w
 
 ### What is tidy data?
 
-Tidy data satisfy the following three criteria:
+Tidy data satisfy the following three criteria [@wickham2014tidy]:
 
 - each row is a single observation,
 - each column is a single variable, and
 - each value is a single cell (i.e., its row and column position in the data frame is not shared with another value)
-
-
 
 ```{r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data", fig.retina = 2, out.width = "1150"}
 knitr::include_graphics("img/tidy_data.jpeg")
