A lot, here's the list
1. Fixed refs across several chapters
2. Fixed typos in install instructions
3. Added LaTeX install instructions

--- a/11-moving-to-your-own-machine.Rmd
+++ b/11-moving-to-your-own-machine.Rmd
@@ -134,8 +134,8 @@ To install these, type the following into
 the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu):
 
 ```
-conda install -c conda-forge r-base
-conda install -c conda-forge r-irkernel
+conda install -c conda-forge -y r-base
+conda install -c conda-forge -y r-irkernel
 ```
 
 To improve the experience of using R in JupyterLab, we will add an extension 
@@ -154,7 +154,7 @@ jupyter lab build
 To install the packages used in this book, type the following in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press enter:
 
 ```
-conda install -c conda-forge -y
+conda install -c conda-forge -y \
   r-cowplot \
   r-ggally \
   r-gridextra \
@@ -167,6 +167,39 @@ conda install -c conda-forge -y
   r-tidymodels \
   r-tinytex \
   unixodbc
+```
+
+### LaTeX
+
+To be able to render `.ipynb` files to `.pdf` you need to install a LaTeX 
+distribution. These can be quite large, so we will opt to use `tinytex`, a 
+light-weight cross-platform, portable, and easy-to-maintain LaTeX distribution 
+based on TeX Live. To install it open JupyterLab by typing `jupyter lab` 
+in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press enter.
+Then from JupyterLab open an R console and type the commands listed below and 
+press Shift + enter to install `tinytex`:
+
+```
+tinytex::install_tinytex()
+tinytex::tlmgr_install(c("eurosym", 
+                         "adjustbox",
+                         "caption",
+                         "collectbox",
+                         "enumitem",
+                         "environ",
+                         "fp",
+                         "jknapltx",
+                         "ms",
+                         "oberdiek",
+                         "parskip",
+                         "pgf",
+                         "rsfs",
+                         "tcolorbox",
+                         "titling",
+                         "trimspaces",
+                         "ucs",
+                         "ulem",
+                         "upquote"))
 ```
 
 ## Moving files to your computer
